# life-sim-2d

./: Cargo.toml  LICENSE  README.md
assets/: init.ron  save.ron
src/: main.rs
src/entities/: behaviors.rs  components.rs  gameloop.rs  mod.rs  perception.rs  systems.rs
src/helpers/: util.rs
src/plugins/: fps.rs  mod.rs  simulation.rs
src/world/: config.rs
