[package]
name = "life-sim-2d"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
noisy_bevy = "=0.7"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
